syntax = "proto3";

package finance;

option go_package = "proto/pb";
import "common.proto";
import "google/protobuf/empty.proto";

// discount service start
service DiscountService{
  rpc GetAllInformationDiscount(GetInformationDiscountRequest) returns(GetInformationDiscountResponse);
  rpc CreateDiscount(AbsDiscountRequest) returns(common.AbsResponse);
  rpc DeleteDiscount(AbsDiscountRequest) returns(common.AbsResponse);
}
message AbsDiscountRequest{
  string groupId = 1;
  string studentId = 2;
  string discountPrice = 3;
  string comment = 4;
}
message GetInformationDiscountRequest{
  string groupId = 1;
}
message GetInformationDiscountResponse{
  repeated AbsStudentDiscount discounts = 1;
}
message AbsStudentDiscount{
  string studentId = 1;
  string studentName = 2;
  string studentPhoneNumber = 3;
  string discount = 4;
  string cause = 5;
  string createdAt = 6;
}
// discount service end

// category service start
service CategoryService{
  rpc CreateCategory(CreateCategoryRequest) returns (common.AbsResponse);
  rpc DeleteCategory(common.DeleteAbsRequest) returns (common.AbsResponse);
  rpc GetAllCategory(google.protobuf.Empty) returns(GetAllCategoryRequest);
}

message CreateCategoryRequest{
  string name = 1;
  string desc = 2;
}
message GetAllCategoryRequest{
  repeated AbsCategory categories = 1;
}
message AbsCategory{
  string id = 1;
  string name = 2;
  string desc = 3;
}
// category service end